[project]
name = "self-crossfader"
version = "0.1.0"
description = ""
authors = [
    {name = "", email = "31088159+shiukaheng@users.noreply.github.com"},
]
dependencies = [
    "pydub~=0.25",
]
dev-dependencies = []
requires-python = ">=3.10"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
